Dashboard: fix incorrect alignment in row view

--- a/src/styles/Dashboard.module.css
+++ b/src/styles/Dashboard.module.css
@@ -81,7 +81,7 @@
 }
 
 .songHCtn h3 {
-    margin: 0 auto 5px 0;
+    margin: 0 auto 0 0;
     font-size: 16px;
 }
 
